--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
+    <title> Les Bleus Vietnam | Hội cổ động viên đội tuyển Pháp tại Việt Nam</title>
+    <meta name="description" content="Les Bleus Vietnam - Hội cổ động viên đội tuyển Pháp tại Việt Nam.">
+    <link rel="stylesheet" href="https://doituyenphap.com/css/bootstrap4.min.css" />
+    <link rel="stylesheet" href="https://doituyenphap.com/css/frontend/main.css" />
+</head>
+
+<body class="landing is-mobile">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+    <!-- Scripts -->
+    <script src="https://doituyenphap.com/js/jquery.min.js"></script>
+    <script src="https://doituyenphap.com/js/jquery.scrollex.min.js"></script>
+    <script src="https://doituyenphap.com/js/jquery.scrolly.min.js"></script>
+    <script src="https://doituyenphap.com/js/skel.min.js"></script>
+    <script src="https://doituyenphap.com/js/util.js"></script>
+    <script src="https://doituyenphap.com/js/main.js"></script>
+</body>
+
 </html>
